# Positive-Negative-Text-Polarity-Classification-with-NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_submission.csv  test_no_answer_2022.csv  train_2022.csv
doc/: recommand.md
doc/figures/: generate_figures.py
result/: final_submission_v6.6_3model_equal.csv  submission_v2.csv  submission_v3.1.csv  submission_v3.csv  submission_v4.csv  submission_v5.csv  submission_v6.csv
src/: ensemble_v66.py  version1.ipynb  version1.py  version2.py  version3.py  version4.py  version5.py  version6.py
src/docs/: v1_strategy.md  v2_strategy.md  v3_strategy.md  v4_strategy.md  v5_strategy.md  v6_strategy.md
